--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "pymaccounter", from="src"}]
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
 dagger-io = "^0.9.5"
+anyio = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core"]
