--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [{include = "pymaccounter", from="src"}]
 python = ">=3.10,<4.0"
 dagger-io = "^0.9.5"
 anyio = "^4.2.0"
+fire = "^0.5.0"
 
 [build-system]
 requires = ["poetry-core"]
