add pandas; add debug_leak test; linting cfg

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -64,3 +64,4 @@ repos:
         # and the way pre-commit references virtual environments.
         additional_dependencies:
           - "dagger-io"
+          - "fire"
