--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = ">=3.10,<4.0"
 dagger-io = "^0.9.5"
 anyio = "^4.2.0"
 fire = "^0.5.0"
+pandas = "^2.1.4"
 
 [build-system]
 requires = ["poetry-core"]
