--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "pymaccounter", from="src"}]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
+
+[tool.poetry.group.runner.dependencies]
 dagger-io = "^0.9.5"
 anyio = "^4.2.0"
 fire = "^0.5.0"
