move to main for running tests

--- a/.github/workflows/run-memory-tests.yaml
+++ b/.github/workflows/run-memory-tests.yaml
@@ -4,7 +4,7 @@ name: run memory tests
 
 on:
   push:
-    branches: [build-demonstrations]
+    branches: [main]
   pull_request:
     branches: [main]
 
