--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = ">=3.10,<4.0"
 dagger-io = "^0.9.5"
 anyio = "^4.2.0"
 fire = "^0.5.0"
+poethepoet = "^0.24.4"
 
 # define poethepoet convenience access
 # to test runner workflow definition
