bandit skip tests for assert linting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,4 +40,7 @@ verbose = true
 [tool.isort]
 profile = "black"
 
+[tool.bandit.assert_used]
+skips =  ['*_test.py', '*test_*.py']
+
 [tool.setuptools_scm]
